--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.11.0",
+    "react-star-ratings": "^2.3.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-star-ratings": "^2.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
